Fix style issues on mobile devices

--- a/style/style.css
+++ b/style/style.css
@@ -9,7 +9,7 @@ html, body {
 }
 
 main, main h1, main h2, main p, main ul {
-  margin: 1rem;
+  margin: 1rem 0;
   text-align: center;
 }
 
